--- a/React/portfolio-elmer-v2/src/components/footer/_footer.scss
+++ b/React/portfolio-elmer-v2/src/components/footer/_footer.scss
@@ -1,9 +1,8 @@
 .footer{
-    // position: relative;
     height: fit-content;
     color: gray;
     text-align: center;
-    background-color: ivory;
+    background-color: white;
 
     h3{
         font-size: medium;
