--- a/React/portfolio-elmer-v2/src/components/banner/_banner.scss
+++ b/React/portfolio-elmer-v2/src/components/banner/_banner.scss
@@ -1,6 +1,6 @@
-.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+.container-fluid {
     width: 100vw;
-    height: 30%;
+    height: 700px;
     padding-right: 0px;
     padding-left: 0px;
     margin-right: auto;
@@ -11,14 +11,13 @@ canvas{
     display: flex;
     position: fixed;
     z-index: -2;
-    height: 700px;
+    max-height: 700px;
     width: 100%;
  
 }
 
-
 .banner{
-    min-height: 500px;
+    min-height: 700px;
 }
 
 .titleBanner{
@@ -28,13 +27,14 @@ canvas{
     align-items: center;
 }
 
-
- h1, h2 {
-    margin-left: 2vw;
+.banner{
+    min-height: 500px;
+}
+ .banner h1, .banner h2 {
     position: fixed;
     z-index: -1;
     color: white;
-    top:8vw;
+    top:9vw;
     font-size: 5vw;
     margin-top: 50px;
 }
@@ -44,4 +44,62 @@ canvas{
 
 }
 
+
+@media (max-width:567px){
+
+}
+
+
+@media (max-width:768px){
+    .container-fluid {height: 300px;}
+     
+    canvas{height: 300px;}
+    
+    .banner{min-height: 300px;}
+    .banner h1, .banner h2 {
+        top:130px;
+        font-size: 50px;
+    }
+    .banner h2{
+        top: 190px;
+        font-size: 35px;
+    }
+}
+
+@media (max-width:992px){
+    .container-fluid {height: 300px;}
+    canvas{height: 300px;}
+    
+    .banner{min-height: 300px;}
+    .banner h1, .banner h2 {
+        top:130px;
+        font-size: 50px;
+    }
+    .banner h2{
+        top: 190px;
+        font-size: 35px;
+    }
+
+}
+
+@media (max-width:1326px){
+    .container-fluid {height: 400px;}
+    canvas{height: 400px;}
+    
+    .banner{min-height: 400px;}
+    .banner h1 {
+        top:130px;
+
+    }
+    .banner h2{
+        top: 210px;
+    }
+
+}
+
+@media (min-width: 2800px) {
+        .banner h1 {top:7vw;}
+        .banner h2{top: 13vw;}
+
+}
 
