--- a/React/portfolio-elmer-v2/src/components/parallax/_parallax.scss
+++ b/React/portfolio-elmer-v2/src/components/parallax/_parallax.scss
@@ -9,3 +9,12 @@
     min-height: 650px;
 
 }
+
+
+
+@media (max-width:768px){
+
+    background-image: url("../../assets/img/portfolio/elmer-portfolio-banner-1030x500v1.2.jpg");
+}
+
+
