--- a/React/portfolio-elmer-v2/src/components/contact/_contact.scss
+++ b/React/portfolio-elmer-v2/src/components/contact/_contact.scss
@@ -5,20 +5,24 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    position: relative;
     width: 100%;
     padding: 50px;
     padding-top: 8vw;
-    background-image: url("../../assets/img/portfolio/codebg-elmer.jpg");
-    // background-attachment: fixed;
+    background-image: url("../../assets/img/portfolio/code-pattrn-bg.jpg");
+    background-repeat: repeat;
+    background-size: 250x 250px;
+    background-attachment: fixed;
     // background-position: center;
-    // background-repeat: no-repeat;
-    // background-size: 50% 50%;
     // background-color: white;
+    // opacity: 0.5;
 
     // background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
     -webkit-animation: Gradient 5s ease infinite;
     -moz-animation: Gradient 5s ease infinite;
     animation: Gradient 5s ease infinite;
+
+   
 
     
     @-webkit-keyframes Gradient {
@@ -46,6 +50,18 @@
     }
 }
 
+.contactContainer::before{
+    content: "";
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: linear-gradient(180deg,  #fff, #daeef5, #fff);
+    opacity: 0.95;
+
+}
+
+
+// background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
 
     form{
         display: flex;
