--- a/React/portfolio-elmer-v2/src/components/footer/_footer.scss
+++ b/React/portfolio-elmer-v2/src/components/footer/_footer.scss
@@ -1,8 +1,12 @@
 .footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     height: fit-content;
-    color: gray;
+    color: rgb(100, 100, 100);
     text-align: center;
-    background-color: white;
+    // background-color: white;
+
 
     h3{
         font-size: medium;
