--- a/React/portfolio-elmer-v2/src/components/navigation/_navigation.scss
+++ b/React/portfolio-elmer-v2/src/components/navigation/_navigation.scss
@@ -3,6 +3,7 @@
     padding-top: 10px;
     background-color: black;
     box-shadow: 2px 2px 4px black;
+    opacity: 0.9;
     // color: white;
 
       svg{
