--- a/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.css
+++ b/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.css
@@ -3,6 +3,7 @@ html, body {
   font-family: 'JetBrains Mono', monospace;
   margin: 0;
   padding: 0;
+  height: 100vh;
 }
 
 .menu {
@@ -60,7 +61,7 @@ h1 {
 .divTableHeading {
   background-color: #333636;
   color: white;
-  display: table-row;
+  display: table-row-group;
 }
 
 .divTableCell, .divTableHead {
@@ -80,7 +81,7 @@ h1 {
   font-weight: bold;
 }
 
-.divTableBody {
+.divTableBody, #divTableContent {
   position: relative;
   display: table-row-group;
 }
@@ -102,11 +103,19 @@ button {
   margin: 25px 0px 0px 10px;
 }
 
+#addMessageUpdate, #addMessageNew {
+  color: #68a453;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
 .btnAdd {
   display: flex;
-  justify-content: center;
+  justify-content: left;
   width: 100%;
   padding: 8px 0px;
+  margin-left: -5px;
 }
 
 .btnDelete {
@@ -148,6 +157,15 @@ label {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 80px;
-  width: 50%;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: fixed;
+  bottom: 15px;
+  font-size: small;
+  color: grey;
 }
 /*# sourceMappingURL=index.css.map */
