--- a/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.scss
+++ b/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.scss
@@ -4,8 +4,9 @@ background-color: rgb(249, 250, 250);
 font-family: 'JetBrains Mono', monospace;
 margin: 0;
 padding: 0;
-
+height: 100vh;
 }
+
 
 
 .menu{
@@ -72,7 +73,7 @@ h1{
 .divTableHeading {
       background-color: rgb(51, 54, 54);
       color: white;
-      display: table-row;
+      display: table-row-group;
 }
 .divTableCell, .divTableHead {
 	border: 1px solid #999999;
@@ -91,7 +92,7 @@ h1{
 	display: table-footer-group;
 	font-weight: bold;
 }
-.divTableBody {
+.divTableBody, #divTableContent {
       position: relative;
 	display: table-row-group;
 }
@@ -118,11 +119,19 @@ button{
     margin: 25px 0px 0px 10px;
 }
 
+#addMessageUpdate, #addMessageNew{
+    color: #68a453;
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+}
+
 .btnAdd {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     width: 100%;
-    padding: 8px 0px; 
+    padding: 8px 0px;
+    margin-left: -5px;
 
 }
 
@@ -174,5 +183,16 @@ label{
     margin-left:auto; 
     margin-right:auto;
     margin-bottom: 80px;
-    width: 50%;
+    // width: 50%;
+    }
+
+    footer{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    position:fixed;
+    bottom: 15px;
+    // text-align: center;
+    font-size: small;
+    color: grey;
     }
