--- a/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.css
+++ b/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.css
@@ -110,6 +110,13 @@ button {
   margin-top: 20px;
 }
 
+#messageAdd {
+  color: #c22a25;
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
 .btnAdd {
   display: flex;
   justify-content: left;
@@ -153,10 +160,11 @@ label {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 80px;
+  margin-top: 45px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 80px;
+  margin-bottom: 50px;
+  padding-bottom: 40px;
 }
 
 footer {
