--- a/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.scss
+++ b/SpringBoot/InventoryTechgrounds/src/main/resources/static/index.scss
@@ -124,7 +124,20 @@ button{
     width: 100%;
     text-align: center;
     margin-top: 20px;
+
+
 }
+
+
+#messageAdd{
+    color: #c22a25;;
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+
+}
+
+
 
 .btnAdd {
     display: flex;
@@ -179,10 +192,11 @@ label{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 80px;
+    margin-top: 45px;
     margin-left:auto; 
     margin-right:auto;
-    margin-bottom: 80px;
+    margin-bottom: 50px;
+    padding-bottom: 40px;
     // width: 50%;
     }
 
